# d1-nezha-baremeta

./: .gitignore  README.md
docs/: 1.编译说明.txt  2.关于全志SDK编译系统启动部分的研究.md  3.d1下载xboot的过程.md  4.关于全志D1开发环境的搭建.md  5.关于spl的编译和烧录.md  6.opensbi的编译与下载.md  7.关于xfel在Linux上编译出windows程序.md  8.如何编译平头哥的gcc工具链.md
opensbi/: build.sh  build_c906.sh  env.sh  sun20iw1p1.config
opensbi/firmware/: fw_base.ldS
opensbi/include/sbi/: sbi_ecall.h  sbi_ecall_interface.h
opensbi/lib/sbi/: riscv_asm.c  sbi_ecall.c  sbi_ecall_replace.c
spl/: .clang-format  .gitignore  .module.common.mk  Makefile  README  autoconf.mk
spl/board/sun20iw1p1/: Makefile  board.c  clock.c  common.mk  fes.mk  mmc.mk  nand.mk  spinor.mk
spl/common/: Makefile  boot_utils.c  console.c  crc32.c  debug.c  eabi_compat.c  gunzip.c  iobase_sunxi.c  malloc.c  memcpy_sunxi.c  memset_sunxi.c  printf.c  string.c
spl/common/lz4/: lz4.c  lz4_wrapper.c
spl/common/lzma/: LzmaDec.c  LzmaDec.h  LzmaTools.c  LzmaTools.h  Makefile  Types.h
spl/common/zlib/: Makefile  adler32.c  deflate.c  deflate.h  inffast.c  inffast.h  inffixed.h  inflate.c  inflate.h  inftrees.c  inftrees.h  trees.c  trees.h  zlib.c  zlib.h  zutil.c  zutil.h
spl/drivers/: Makefile  gpkey.c  i2c.c  lrkey.c  pinmux.c  pmic_bus.c  prcm.c  rsb.c  rtc.c  serial.c  spi-sunxi.h  spi.c  standby.c  sunxi_dma.c  watchdog.c
spl/drivers/dram/: Makefile  sunxi_dram.c
spl/drivers/power/: Makefile  axp.c  axp152.c  axp1530.c  axp2101.c  axp2202.c  axp806.c  axp809.c  axp81X.c  axp858.c
spl/drivers/spinor/: Makefile  spinor.c
spl/fes/: Makefile
spl/fes/main/: Makefile  fes1_head.c  fes1_main.c
spl/include/: cache_align.h  common.h  mmc_boot0.h  nand_boot0.h  openssl_ext.h  private_atf.h  private_boot0.h  private_opensbi.h  private_tee.h  private_toc.h  private_uboot.h  spare_head.h
spl/include/arch/: axp.h  axp152_reg.h  axp1530_reg.h  axp2101_reg.h  axp2202_reg.h  axp806_reg.h  axp809_reg.h  axp81x_reg.h  axp858_reg.h  boot0.h  ce.h  ce_1.0.h  ce_2.0.h  ce_2.1.h  ce_2.3.h  clock.h  clock_sun20iw1.h  cpu.h  dma.h  (+25 more)
spl/mk/: config.mk
spl/nboot/: Makefile  make_download.sh
spl/tools/: generate_hash_header_file.sh
src/0.sdboot-to-fel/: Makefile  link.ld  meson.build  readme.txt  start.S
src/1.startup/: Makefile  main.c  riscv64.h  start.S
src/10.peripheral_timer/: cross.txt  main.c  meson.build  plint.c
src/2.vector_example/: 1.txt  Makefile  clk.c  link.ld  main.c  start.S
src/3.uart/: Makefile  clk.c  clk.h  common.h  gpio.c  gpio.h  link.ld  linkage.h  main.c  riscv64.h  start.S  uart.c  uart.h
src/4.soft_intrrupt/: clint.c  clint.h  common.c  gpio.h  main.c  meson.build  riscv64.h  riscv_asm.h  run.sh  timer.h  types.h  uart.c
src/4.timer/: Makefile  clint.c  clint.h  clk.c  common.h  interrupt.c  link.ld  main.c  meson.build  run.sh  start.S  timer.c  trap.S  uart.c  uart.h
src/5.timer/: clint.c  clint.h  common.c  cross.txt  gpio.c  interrupt.c  main.c  meson.build  readme.txt  riscv_encoding.h  start.S  trap.S
src/6.plint/: interrupt.c  main.c  meson.build  plint.c  timer.c  uart.c  uart.h
src/7.led/: gpio.c  interrupt.c  interrupt.h  main.c  meson.build
src/8.input/: gpio.c  link.ld  main.c  meson.build  plint.c
src/9.watchdog/: gpio.h  plint.h  run.sh
src/d1_barematel_sdk/: cross.txt  meson.build  readme.md
src/d1_barematel_sdk/apps/: main.c  meson.build
src/d1_barematel_sdk/boot/: meson.build  riscv64.h
src/d1_barematel_sdk/drivers/: gpio.c  meson.build
tools/linux/: make_sdcard_fex.sh
(+220 files in other folders)
