sources += [
   join_paths(meson.current_source_dir(), 'clint.c'),
   join_paths(meson.current_source_dir(), 'clk.c'),
   join_paths(meson.current_source_dir(), 'gpio.c'),
   join_paths(meson.current_source_dir(), 'plint.c'),
   join_paths(meson.current_source_dir(), 'timer.c'),
   join_paths(meson.current_source_dir(), 'uart.c'),
]